apps/client/src/widgets/type_widgets/text/lexical/ToolbarPlugin.css
.note-detail-editable-text {
    .toolbar {
        display: flex;
        margin-bottom: 1px;
        background: var(--classic-toolbar-vert-layout-background-color);
        padding: 6px;
        border-radius: 6px;
        margin: 20px;
        vertical-align: middle;
    }

    .toolbar button.toolbar-item {
        border: 0;
        display: flex;
        background: none;
        border-radius: 10px;
        padding: 8px;
        cursor: pointer;
        vertical-align: middle;
    }

    .toolbar button.toolbar-item:disabled {
        cursor: not-allowed;
    }

    .toolbar .divider {
        width: 1px;
        background-color: #eee;
        margin: 0 4px;
    }

    .toolbar .toolbar-item .text {
        display: flex;
        line-height: 20px;
        width: 200px;
        vertical-align: middle;
        font-size: 14px;
        color: #777;
        text-overflow: ellipsis;
        width: 70px;
        overflow: hidden;
        height: 20px;
        text-align: left;
    }

    .toolbar .toolbar-item .icon {
        display: flex;
        width: 20px;
        height: 20px;
        user-select: none;
        margin-right: 8px;
        line-height: 16px;
        background-size: contain;
    }
}

